added google map api

--- a/booking-hourly.html
+++ b/booking-hourly.html
@@ -23,6 +23,7 @@
         }
     </script>
     <style>.checkbox-label-inline { cursor: pointer; }</style>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD3JZ8f3UcsCnwcwnFC5TupNww5RQjgVUU&libraries=places&callback=initMapAutocomplete&loading=async" defer></script>
 </head>
 <body class="font-inter bg-brand-bg-light text-brand-text-dark antialiased">
 
