--- a/booking-jom-new.html
+++ b/booking-jom-new.html
@@ -21,7 +21,9 @@
              theme: { extend: { fontFamily: { 'playfair': ['"Playfair Display"', 'serif'], 'inter': ['"Inter"', 'sans-serif'] }, colors: { 'brand-primary': '#a67c52', 'brand-secondary': '#b78a50', 'brand-accent': '#8d5f34', 'brand-text-dark': '#3a3a3a', 'brand-text-light': '#f8f8f8', 'brand-bg-light': '#fdf9f5', 'brand-bg-card': 'rgba(255, 255, 255, 0.95)', 'brand-bg-card-opaque': '#ffffff', 'brand-error': '#dc2626', 'brand-error-light': '#fee2e2', 'brand-success': '#059669', 'brand-success-light': '#d1fae5', 'brand-overlay': 'rgba(58, 44, 28, 0.45)', 'brand-header-bg': '#2d2d2d', 'brand-footer-bg': '#2d2d2d', 'brand-border': '#d1d5db', 'brand-border-light': 'rgba(166, 124, 82, 0.15)', } } }
         }
     </script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD3JZ8f3UcsCnwcwnFC5TupNww5RQjgVUU&libraries=places&callback=initMapAutocomplete&loading=async" defer></script>
 </head>
+
 <body class="font-inter bg-brand-bg-light text-brand-text-dark antialiased">
 
     <header id="main-header" class="fixed top-0 left-0 w-full z-[1000] shadow-md">
