--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
                         'brand-text-dark': '#3a3a3a',
                         'brand-text-light': '#f8f8f8',
                         'brand-bg-light': '#fdf9f5',
+                        'brand-bg-white': '#ffffff', // Added for alternating backgrounds
                         'brand-bg-card': 'rgba(255, 255, 255, 0.92)',
                         'brand-bg-card-opaque': '#ffffff',
                         'brand-border': '#d1d5db',
@@ -52,7 +53,7 @@
         }
     </script>
 </head>
-<body class="font-inter bg-brand-bg-light text-brand-text-dark antialiased">
+<body class="font-inter bg-brand-bg-light text-brand-text-dark antialiased homepage-scroll-enabled">
 
 <header id="main-header" class="fixed top-0 left-0 w-full z-[1000]">
     <nav class="container mx-auto px-6 py-3 flex justify-between items-center">
@@ -74,7 +75,7 @@
                     </div>
                 </div>
                 <a href="#contact" class="nav-link internal-link">Contact</a>
-            </div>
+                <a href="vendor-hub.html" class="nav-link">Partners</a> </div>
             <div class="w-px h-6 bg-gray-400 opacity-50 hidden md:block"></div>
             <div class="flex items-center space-x-3 sm:space-x-4">
                 <a href="mailto:keysbycaleb@gmail.com" class="nav-link text-xl" title="Email Me"><i class="fas fa-envelope"></i></a>
@@ -104,8 +105,7 @@
         </div>
     </section>
 
-    <section id="about" class="bg-brand-bg-light">
-        <div class="container mx-auto px-6 flex flex-col md:flex-row items-center gap-12 md:gap-16">
+    <section id="about"> <div class="container mx-auto px-6 flex flex-col md:flex-row items-center gap-12 md:gap-16">
             <div class="md:w-2/5"><img src="assets/images/caleb_profile_pic.jpg" alt="Caleb playing piano outdoors at an event" class="rounded-lg shadow-xl w-full h-auto object-cover aspect-[4/5] max-h-[70vh]"></div>
             <div class="md:w-3/5 text-center md:text-left">
                 <h2 class="section-title">Meet Caleb</h2><p class="section-subtitle mb-6">Your Event Pianist</p>
@@ -117,8 +117,7 @@
         </div>
     </section>
 
-    <section id="packages" class="bg-gradient-to-b from-white to-brand-bg-light">
-        <div class="container mx-auto px-6 text-center">
+    <section id="packages"> <div class="container mx-auto px-6 text-center">
             <h2 class="section-title">Packages</h2><p class="section-subtitle mb-12 md:mb-16 max-w-3xl mx-auto">Choose the perfect live piano experience for your event, from focused moments to comprehensive coverage.</p>
             <div class="grid grid-cols-1 md:grid-cols-3 gap-8 md:gap-10">
                 <div class="package-card">
@@ -134,22 +133,56 @@
         </div>
     </section>
 
-    <section id="gallery" class="bg-brand-bg-light section-allow-scroll">
-         <div class="container mx-auto px-6 text-center">
+    <section id="gallery" class="section-allow-scroll"> <div class="container mx-auto px-6 text-center">
             <h2 class="section-title">Gallery</h2><p class="section-subtitle mb-12 md:mb-16">Moments captured from beautiful events.</p>
             <div class="grid grid-cols-2 md:grid-cols-3 gap-4 md:gap-6">
-                <div class="gallery-item"><img src="assets/images/gallery1.jpg" alt="Gallery Image 1" class="gallery-image"></div>
-                <div class="gallery-item"><img src="assets/images/gallery2.jpg" alt="Gallery Image 2 - Caleb playing piano" class="gallery-image" style="object-position: center 60%;"></div> 
-                <div class="gallery-item"><img src="assets/images/gallery3.jpg" alt="Gallery Image 3 - Piano at event" class="gallery-image" style="object-position: center 60%;"></div>    
-                <div class="gallery-item"><img src="assets/images/gallery4.jpg" alt="Gallery Image 4" class="gallery-image"></div>
-                <div class="gallery-item"><img src="assets/images/gallery5.jpg" alt="Gallery Image 5 - Outdoor piano" class="gallery-image" style="object-position: center 60%;"></div>     
-                <div class="gallery-item"><img src="assets/images/gallery6.jpg" alt="Gallery Image 6" class="gallery-image"></div>
+                <div class="gallery-item">
+                    <video class="gallery-video"
+                           src="assets/images/vidgallery1.mp4" loop muted autoplay playsinline
+                           poster="assets/images/gallery1.JPG">
+                        Your browser does not support the video tag.
+                    </video>
+                </div>
+                <div class="gallery-item">
+                    <video class="gallery-video"
+                           src="assets/images/vidgallery2.mp4" loop muted autoplay playsinline
+                           poster="assets/images/gallery2.JPG">
+                        Your browser does not support the video tag.
+                    </video>
+                </div>
+                 <div class="gallery-item">
+                    <video class="gallery-video"
+                           src="assets/images/vidgallery3.mp4" loop muted autoplay playsinline
+                           poster="assets/images/gallery3.JPG">
+                        Your browser does not support the video tag.
+                    </video>
+                </div>
+                 <div class="gallery-item">
+                    <video class="gallery-video"
+                           src="assets/images/vidgallery4.mp4" loop muted autoplay playsinline
+                           poster="assets/images/gallery4.JPG">
+                        Your browser does not support the video tag.
+                    </video>
+                </div>
+                 <div class="gallery-item">
+                    <video class="gallery-video"
+                           src="assets/images/vidgallery5.mp4" loop muted autoplay playsinline
+                           poster="assets/images/gallery5.JPG">
+                        Your browser does not support the video tag.
+                    </video>
+                </div>
+                 <div class="gallery-item">
+                    <video class="gallery-video"
+                           src="assets/images/vidgallery6.mp4" loop muted autoplay playsinline
+                           poster="assets/images/gallery6.JPG">
+                        Your browser does not support the video tag.
+                    </video>
+                </div>
             </div>
         </div>
     </section>
 
-    <section id="testimonials" class="bg-brand-bg-light section-allow-scroll">
-         <div class="container mx-auto px-6 text-center">
+    <section id="testimonials" class="section-allow-scroll"> <div class="container mx-auto px-6 text-center">
             <h2 class="section-title">Kind Words</h2><p class="section-subtitle mb-8 md:mb-10">What clients are saying about Keys by Caleb.</p>
             <div class="grid grid-cols-1 md:grid-cols-3 gap-8 md:gap-10 mb-6 md:mb-8">
                 <div class="testimonial-card"><div class="text-brand-secondary text-3xl mb-3 opacity-50"><i class="fas fa-quote-left"></i></div><p class="italic text-brand-text-dark mb-4 leading-relaxed">"Caleb's music was the absolute highlight of our ceremony. So elegant and moving. Many guests commented on how beautiful it was!"</p><p class="font-semibold text-brand-primary">- Sarah & Tom W.</p></div><div class="testimonial-card"><div class="text-brand-secondary text-3xl mb-3 opacity-50"><i class="fas fa-quote-left"></i></div><p class="italic text-brand-text-dark mb-4 leading-relaxed">"As an event planner, I need reliable and talented vendors. Caleb provided the perfect elegant background music for our corporate gala. Professional and easy to work with."</p><p class="font-semibold text-brand-primary">- J. Davis, Event Planner</p></div><div class="testimonial-card"><div class="text-brand-secondary text-3xl mb-3 opacity-50"><i class="fas fa-quote-left"></i></div><p class="italic text-brand-text-dark mb-4 leading-relaxed">"From the first email to the final note, Caleb was a pleasure. He learned a special song for us and played it beautifully. Highly recommend!"</p><p class="font-semibold text-brand-primary">- Emily R.</p></div>
@@ -162,8 +195,7 @@
         </div>
     </section>
 
-    <section id="contact" class="bg-gradient-to-b from-white to-brand-bg-light section-allow-scroll">
-        <div class="container mx-auto px-6 flex flex-col justify-center">
+    <section id="contact" class="section-allow-scroll"> <div class="container mx-auto px-6 flex flex-col justify-center">
             <div class="max-w-3xl mx-auto text-center mb-6 md:mb-8"><h2 class="section-title">Get In Touch</h2><p class="section-subtitle">Ready to discuss the music for your special day? Fill out the form below or email <a href="mailto:keysbycaleb@gmail.com" class="text-brand-primary hover:text-brand-secondary font-medium">keysbycaleb@gmail.com</a> directly.</p></div>
             <form id="contact-form" name="contact" method="POST" data-netlify="true" netlify-honeypot="bot-field" class="max-w-xl mx-auto bg-brand-bg-card p-6 md:p-8 rounded-lg shadow-lg border border-brand-secondary/20 w-full">
                 <div id="form-message" class="mb-6 hidden p-4 rounded-md text-center"></div>
@@ -183,11 +215,10 @@
     </section>
 </main>
 
-<footer id="main-footer" class="bg-brand-footer-bg text-brand-text-light py-12 md:py-16">
-    <div class="container mx-auto px-6">
+<footer id="main-footer"> <div class="container mx-auto px-6">
         <div class="grid grid-cols-1 md:grid-cols-3 gap-10 md:gap-8 text-center md:text-left">
             <div class="space-y-3"><a href="index.html#hero" class="inline-block font-playfair text-2xl font-bold footer-nav-link internal-link">Keys by Caleb</a><p class="text-sm opacity-75">Elegant Live Piano Music</p><p class="text-xs opacity-60">Serving Riverside, CA & Surrounding Areas</p><p class="text-xs opacity-60 mt-4">© <span id="current-year">2025</span> Keys by Caleb. All Rights Reserved.</p></div>
-            <div class="space-y-3"><h4 class="footer-heading">Quick Links</h4><ul class="space-y-2"><li><a href="index.html#about" class="footer-nav-link internal-link">About Caleb</a></li><li><a href="index.html#packages" class="footer-nav-link internal-link">Services & Packages</a></li><li><a href="index.html#gallery" class="footer-nav-link internal-link">Gallery</a></li><li><a href="index.html#testimonials" class="footer-nav-link internal-link">Testimonials</a></li><li><a href="index.html#contact" class="footer-nav-link internal-link">Contact Us</a></li></ul></div>
+            <div class="space-y-3"><h4 class="footer-heading">Quick Links</h4><ul class="space-y-2"><li><a href="index.html#about" class="footer-nav-link internal-link">About Caleb</a></li><li><a href="index.html#packages" class="footer-nav-link internal-link">Services & Packages</a></li><li><a href="index.html#gallery" class="footer-nav-link internal-link">Gallery</a></li><li><a href="index.html#testimonials" class="footer-nav-link internal-link">Testimonials</a></li><li><a href="index.html#contact" class="footer-nav-link internal-link">Contact Us</a></li><li><a href="vendor-hub.html" class="footer-nav-link">Partners</a></li></ul></div>
             <div class="space-y-3">
                 <h4 class="footer-heading">Booking</h4>
                 <ul class="space-y-2">
@@ -207,7 +238,9 @@
         </div>
     </div>
 </footer>
-</div> <button id="scroll-to-top" class="fixed bottom-6 right-6 bg-brand-primary text-white w-11 h-11 rounded-full shadow-lg hidden justify-center items-center hover:bg-brand-secondary transition-all duration-300 z-40 text-xl"><i class="fas fa-arrow-up"></i></button>
+</div> <button id="scroll-to-top" class="fixed bottom-6 right-6 bg-brand-primary text-white w-11 h-11 rounded-full shadow-lg hidden justify-center items-center hover:bg-brand-secondary transition-all duration-300 z-40 text-xl">
+    <i class="fas fa-arrow-up"></i>
+</button>
 
 <script src="https://cdn.jsdelivr.net/npm/tsparticles-slim@2.12.0/tsparticles.slim.bundle.min.js"></script>
 <script src="js/main-new.js"></script>
