--- a/vendor-events.html
+++ b/vendor-events.html
@@ -33,7 +33,7 @@
                     <a href="index.html#testimonials" class="nav-link">Testimonials</a>
                     <div class="nav-item-dropdown">
                         <button type="button" class="nav-link booking-nav-link"> Booking <i class="fas fa-chevron-down icon-xs"></i> </button>
-                        <div class="nav-dropdown">
+                        <div class="nav-dropdown booking-dropdown">
                             <a href="booking-jom-new.html" class="dropdown-link">Just One Moment</a>
                             <a href="booking-hourly.html" class="dropdown-link">Book By The Hour</a>
                             <a href="booking-tfe-new.html" class="dropdown-link">Book Full Experience</a>
@@ -44,13 +44,12 @@
                 <div class="header-separator"></div> <div class="header-secondary-links">
                     <a href="mailto:keysbycaleb@gmail.com" class="nav-icon-link" title="Email Me"><i class="fas fa-envelope"></i></a>
                     <div class="nav-item-dropdown">
-                        <button type="button" class="nav-link follow-button">Follow Us <i class="fas fa-chevron-down icon-xs"></i></button>
-                        <div class="nav-dropdown follow-dropdown">
+                        <button type="button" class="nav-link socials-button"> Socials <i class="fas fa-chevron-down icon-xs"></i></button> <div class="nav-dropdown socials-dropdown">
                             <a href="https://www.instagram.com/keysbycaleb/" target="_blank" rel="noopener noreferrer" class="dropdown-link"><i class="fab fa-facebook-f icon-sm"></i> Facebook</a>
                             <a href="https://www.instagram.com/keysbycaleb/" target="_blank" rel="noopener noreferrer" class="dropdown-link"><i class="fab fa-instagram icon-sm"></i> Instagram</a>
                             <a href="https://tiktok.com/@keys_by_caleb" target="_blank" rel="noopener noreferrer" class="dropdown-link"><i class="fab fa-tiktok icon-sm"></i> TikTok</a>
                             <a href="youtube.com/@KeysByCaleb" target="_blank" rel="noopener noreferrer" class="dropdown-link"><i class="fab fa-youtube icon-sm"></i> YouTube</a>
-                        </div>
+                            <a href="mailto:keysbycaleb@gmail.com" class="dropdown-link"><i class="fas fa-envelope icon-sm"></i> Email Us</a> </div>
                     </div>
                 </div>
             </div>
