--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 
-    <link rel="stylesheet" href="css/style-new.css">
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
+    <link rel="stylesheet" href="css/style-new.css"> <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollToPlugin.min.js"></script>
 
     <script>
@@ -226,8 +224,8 @@
     <footer id="main-footer">
         <div class="container mx-auto px-6">
              <div class="grid grid-cols-1 md:grid-cols-3 gap-10 md:gap-8 text-center md:text-left">
-                 <div class="space-y-3"><a href="index.html#hero" class="inline-block font-playfair text-2xl font-bold footer-nav-link internal-link">Keys by Caleb</a><p class="text-sm opacity-75">Elegant Live Piano Music</p><p class="text-xs opacity-60">Serving Riverside, CA & Surrounding Areas</p><p class="text-xs opacity-60 mt-4">© <span id="current-year">2025</span> Keys by Caleb. All Rights Reserved.</p></div>
-                 <div class="space-y-3"><h4 class="footer-heading">Quick Links</h4><ul class="space-y-2"><li><a href="index.html#about" class="footer-nav-link internal-link">About Caleb</a></li><li><a href="index.html#packages" class="footer-nav-link internal-link">Services & Packages</a></li><li><a href="index.html#gallery" class="footer-nav-link internal-link">Gallery</a></li><li><a href="index.html#testimonials" class="footer-nav-link internal-link">Testimonials</a></li><li><a href="index.html#contact" class="footer-nav-link internal-link">Contact Us</a></li><li><a href="vendor-hub.html" class="footer-nav-link">Partners</a></li></ul></div>
+                 <div class="space-y-3"><a href="#hero" class="inline-block font-playfair text-2xl font-bold footer-nav-link internal-link">Keys by Caleb</a><p class="text-sm opacity-75">Elegant Live Piano Music</p><p class="text-xs opacity-60">Serving Riverside, CA & Surrounding Areas</p><p class="text-xs opacity-60 mt-4">© <span id="current-year">2025</span> Keys by Caleb. All Rights Reserved.</p></div>
+                 <div class="space-y-3"><h4 class="footer-heading">Quick Links</h4><ul class="space-y-2"><li><a href="#about" class="footer-nav-link internal-link">About Caleb</a></li><li><a href="#packages" class="footer-nav-link internal-link">Services & Packages</a></li><li><a href="#gallery" class="footer-nav-link internal-link">Gallery</a></li><li><a href="#testimonials" class="footer-nav-link internal-link">Testimonials</a></li><li><a href="#contact" class="footer-nav-link internal-link">Contact Us</a></li><li><a href="vendor-hub.html" class="footer-nav-link">Partners</a></li></ul></div>
                  <div class="space-y-3">
                      <h4 class="footer-heading">Booking</h4>
                      <ul class="space-y-2">
@@ -247,7 +245,9 @@
              </div>
          </div>
     </footer>
-</div> <nav id="mobile-bottom-nav" class="lg:hidden">
+</div>
+
+<nav id="mobile-bottom-nav" class="lg:hidden">
     <div class="mobile-nav-inner">
         <a href="#hero" class="mobile-nav-item internal-link homepage-link"> <i class="fas fa-home mobile-nav-icon"></i>
             <span class="mobile-nav-label">Home</span>
@@ -287,7 +287,5 @@
 </button>
 
 <script src="https://cdn.jsdelivr.net/npm/tsparticles-slim@2.12.0/tsparticles.slim.bundle.min.js"></script>
-<script src="js/main-new.js"></script>
-
-</body>
+<script src="js/main-new.js"></script> </body>
 </html>
