--- a/index.html
+++ b/index.html
@@ -91,17 +91,15 @@
                     </div>
                  </div>
             </div>
-
         </nav>
-    </header>
+        <div id="tsparticles-header" class="tsparticles-layer"></div> </header>
 
     <main id="scroll-container">
 
         <section id="hero" class="scroll-section hero-section" style="background-image: url('assets/images/hero_pic.jpg');">
             <div class="overlay"></div>
-            <div id="tsparticles-hero" class="tsparticles-container"></div>
-            <div class="hero-content content-wrapper">
-                 <h1 class="dynamic-idea" data-animate="fade-in">Elegant Wedding Music</h1>
+            <div id="tsparticles-hero" class="tsparticles-container"></div> <div class="hero-content content-wrapper">
+                 <h1 class="dynamic-idea" data-animate="fade-in">Sophisticated Soundtracks</h1>
                  <p class="hero-static-line" data-animate="fade-in">for<br>Your Unforgettable Moments</p>
                 <p data-animate="fade-in">Live piano artistry by Caleb creates the perfect atmosphere for weddings, corporate events, and private parties in Riverside, CA and beyond.</p>
                 <a href="#services" class="btn btn-primary internal-link">Explore Services <i class="fas fa-chevron-down ml-2"></i></a>
@@ -175,10 +173,9 @@
         </section>
 
         <section id="testimonials" class="scroll-section testimonials-section dark-bg">
-             <div id="tsparticles-testimonials" class="tsparticles-container"></div>
-             <div class="content-wrapper">
+             <div id="tsparticles-testimonials" class="tsparticles-container"></div> <div class="content-wrapper">
                 <h2 class="section-title" data-animate="fade-in">Kind Words</h2>
-                <p class="section-subtitle" data-animate="fade-in">What clients are saying. <a href="testimonials-new.html" class="text-link" style="color: var(--color-secondary); font-weight: 600;">See all reviews</a></p> 
+                <p class="section-subtitle" data-animate="fade-in">What clients are saying. <a href="testimonials-new.html" class="text-link" style="color: var(--color-secondary); font-weight: 600;">See all reviews</a></p>
                  <div class="carousel-container" id="testimonials-carousel" data-animate="slide-up">
                      <button class="carousel-btn prev-btn" aria-label="Previous Testimonial"><i class="fas fa-chevron-left"></i></button>
                      <div class="carousel-wrapper">
@@ -258,21 +255,57 @@
         </section>
 
         <footer id="main-footer" class="scroll-section">
-            <div class="container">
-                <div class="footer-grid">
-                    <div class="footer-col footer-col-brand">
-                        <a href="#hero" class="footer-logo internal-link">Keys by Caleb</a> <p class="footer-tagline">Elegant Live Piano Music</p> <p class="footer-location">Serving Riverside, CA & Surrounding Areas</p> <p class="footer-copyright">© <span id="current-year">2025</span> Keys by Caleb. All Rights Reserved.</p>
+            <div id="tsparticles-footer" class="tsparticles-layer"></div> <div class="container">
+                <div class="footer-main-content-wrapper">
+                    <div class="footer-brand-col">
+                        <a href="#hero" class="footer-logo internal-link">Keys by Caleb</a>
+                        <p class="footer-tagline-compact">Elegant Live Piano Music</p>
+                        <p class="footer-location-compact">Serving Riverside, CA & Surrounding Areas</p>
                     </div>
-                    <div class="footer-col footer-col-links">
-                        <h4 class="footer-heading">Quick Links</h4> <ul class="footer-nav-list"> <li><a href="#about" class="footer-nav-link internal-link">About Caleb</a></li> <li><a href="#services" class="footer-nav-link internal-link">Services</a></li> <li><a href="#gallery" class="footer-nav-link internal-link">Gallery</a></li> <li><a href="#testimonials" class="footer-nav-link internal-link">Testimonials</a></li> <li><a href="vendor-hub.html" class="footer-nav-link">Partners</a></li> <li><a href="booking-jom-new.html" class="footer-nav-link">Booking</a></li> <li><a href="#contact" class="footer-nav-link internal-link">Contact Us</a></li> </ul>
+
+                    <div class="footer-links-col">
+                        <h4 class="footer-heading-compact">Explore</h4>
+                        <ul class="footer-nav-list-compact">
+                            <li><a href="#about" class="footer-nav-link internal-link">About Caleb</a></li>
+                            <li><a href="#services" class="footer-nav-link internal-link">Services</a></li>
+                            <li><a href="#gallery" class="footer-nav-link internal-link">Gallery</a></li>
+                            <li><a href="#testimonials" class="footer-nav-link internal-link">Testimonials</a></li>
+                        </ul>
                     </div>
-                    <div class="footer-col footer-col-connect">
-                        <h4 class="footer-heading">Connect</h4> <div class="footer-social-icons"> <a href="https://www.instagram.com/keysbycaleb/" target="_blank" rel="noopener noreferrer" class="footer-social-icon" title="Facebook"><i class="fab fa-facebook-f"></i><span class="sr-only">Facebook</span></a> <a href="https://www.instagram.com/keysbycaleb/" target="_blank" rel="noopener noreferrer" class="footer-social-icon" title="Instagram"><i class="fab fa-instagram"></i><span class="sr-only">Instagram</span></a> <a href="https://tiktok.com/@keys_by_caleb" target="_blank" rel="noopener noreferrer" class="footer-social-icon" title="TikTok"><i class="fab fa-tiktok"></i><span class="sr-only">TikTok</span></a> <a href="youtube.com/@KeysByCaleb" target="_blank" rel="noopener noreferrer" class="footer-social-icon" title="YouTube"><i class="fab fa-youtube"></i><span class="sr-only">YouTube</span></a> <a href="mailto:keysbycaleb@gmail.com" class="footer-social-icon" title="Email"><i class="fas fa-envelope"></i><span class="sr-only">Email</span></a> </div>
+
+                    <div class="footer-links-col">
+                        <h4 class="footer-heading-compact">More Info</h4>
+                        <ul class="footer-nav-list-compact">
+                            <li><a href="testimonials-new.html" class="footer-nav-link">Full Reviews</a></li>
+                            <li><a href="vendor-hub.html" class="footer-nav-link">Partners</a></li>
+                            <li><a href="#contact" class="footer-nav-link internal-link">Contact Us</a></li>
+                        </ul>
                     </div>
+
+                    <div class="footer-links-col">
+                        <h4 class="footer-heading-compact">Booking</h4>
+                        <ul class="footer-nav-list-compact">
+                            <li><a href="booking-jom-new.html" class="footer-nav-link">Just One Moment</a></li>
+                            <li><a href="booking-hourly.html" class="footer-nav-link">By The Hour</a></li>
+                            <li><a href="booking-tfe-new.html" class="footer-nav-link">The Full Experience</a></li>
+                        </ul>
+                    </div>
+
+                    <div class="footer-social-col">
+                        <div class="footer-social-icons-compact">
+                            <a href="https://www.instagram.com/keysbycaleb/" target="_blank" rel="noopener noreferrer" class="footer-social-icon" title="Facebook"><i class="fab fa-facebook-f"></i><span class="sr-only">Facebook</span></a>
+                            <a href="https://www.instagram.com/keysbycaleb/" target="_blank" rel="noopener noreferrer" class="footer-social-icon" title="Instagram"><i class="fab fa-instagram"></i><span class="sr-only">Instagram</span></a>
+                            <a href="https://tiktok.com/@keys_by_caleb" target="_blank" rel="noopener noreferrer" class="footer-social-icon" title="TikTok"><i class="fab fa-tiktok"></i><span class="sr-only">TikTok</span></a>
+                            <a href="youtube.com/@KeysByCaleb" target="_blank" rel="noopener noreferrer" class="footer-social-icon" title="YouTube"><i class="fab fa-youtube"></i><span class="sr-only">YouTube</span></a>
+                            <a href="mailto:keysbycaleb@gmail.com" class="footer-social-icon" title="Email"><i class="fas fa-envelope"></i><span class="sr-only">Email</span></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="footer-copyright-line">
+                    <p>© <span id="current-year">2025</span> Keys by Caleb. All Rights Reserved.</p>
                 </div>
             </div>
         </footer>
-
     </main>
 
     <nav id="mobile-bottom-nav">
